<resources>
    <string name="title_activity_assignment_detail">AssignmentDetailActivity</string>
    <string name="messageUnableToGetData">unable to get data</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a `system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection score that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards."
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_student_summary">Submitted Assignments</string>
    <string name="title_activity_assign_resource">Assign Resources</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="string_popup_header">Quiz Wizard</string>
    <string name="string_AddQuizTitle">Title</string>
    <string name="string_SelectTopic">Description</string>
    <string name="string_AddThumbnailImage">Thumbnail</string>
    <string name="string_QuizType">Quiz Type</string>
    <string name="string_QuizBoard">Board</string>
    <string name="string_QuizLL">Learning Level</string>
    <string name="string_QuizLanguage">Language</string>
    <string name="string_QuizGrade">Grade</string>
    <string name="string_QuizSubject">Subject</string>
    <string name="string_QuizTopic">Topic</string>
    <string name="labelRetry">Retry</string>
    <string name="errorFetchNews">Unable to fetch news.</string>
    <string name="messageNoNewsAvailable">No news available</string>
    <string name="label_news">News</string>
    <string name="labelVideos">Videos</string>
    <string name="error_title">Please enter quiz title</string>
    <string name="error_type">Please select quiz type</string>
    <string name="error_board">Please select board</string>
    <string name="error_level">Please select learning level</string>
    <string name="error_language">Please select language</string>
    <string name="error_grade">Please select grade</string>
    <string name="error_subject">Please select subject</string>
    <string name="error_topic">Please select topic</string>
    <string name="error_thumbnail">Please select Quiz Thumbnail</string>
    <string name="fetching">Fetching</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="download_done">Download done</string>
    <string name="download_queue">Download in queue</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="micro_learning_courses">Micro Learning Courses</string>
    <string name="assessments">Assessments</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="title_activity_assign_course">Assign Courses</string>
    <string name="string_filter">Filter</string>
    <string name="string_submitted_assignments">Submitted Assignments</string>
    <string name="filter_type_map">Filter Map</string>
    <string name="string_sync_now">Sync Now</string>
    <string name="string_signout">Sign Out</string>
    <string name="string_group">Group</string>
    <string name="string_location">Location</string>
    <string name="string_date">Date</string>
    <string name="string_period">Period</string>
    <string name="string_post">Post</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_event">Create Event</string>
    <string name="string_loading_ftp_resource">Loading File</string>
    <string name="heading_category_search">Tap to Browse</string>
    <string name="navigation_drawer_ope">Open navigation drawer</string>
    <string name="title_activity_maps">Contact Us</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="google_maps_key">AIzaSyB5EhvD2epD0ewlDqysHeFilI3NL2u3xuA</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_start_time">Select start time</string>
    <string name="error_event_time">Select end time greater then start time</string>
    <string name="error_event_same_time">Start time and End Time cannot be same</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="time">Time</string>
    <string name="attachments">Attachments</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="string_from_period">From Period</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="string_to_period">To Period</string>
    <string name="string_to">To</string>
    <string name="string_class">Class</string>
    <string name="repeat">Repeat</string>
    <string name="personal">Personal</string>
    <string name="activity">Activity</string>
    <string name="perd_adjust">Period Adjustment</string>
    <string name="class_ann">Class Announcement</string>
    <string name="school_ann">School Announcement</string>
    <string name="string_nav_learning_map">Learning Map</string>
    <string name="string_nav_teacher_map">Class Performance</string>
    <string name="string_nav_tracking">Tracking</string>
    <string name="cancel">Cancel</string>
    <string name="rate_and_review">Rate and Review</string>
    <string name="rate_it">Rate it</string>
    <string name="browse_courses">Browse Courses</string>
    <string name="title_blog">Blogs</string>
    <string name="action_go_to_date">Go to date</string>
    <string name="action_create_event">Create new event</string>
    <string name="action_calendar_help">Help</string>
    <string name="label_personal_events">Personal Events</string>
    <string name="label_activities">Activities</string>
    <string name="label_announcements">Announcements</string>
    <string name="label_create_quiz">Create Quiz</string>
    <string name="label_workspace">Workspace</string>
    <string name="favorites">Favorites</string>
    <string name="labelTrainings">Trainings</string>
    <string name="labelClassPlanner">Class Planner</string>
    <string name="labelRapidLearning">Rapid Learning</string>
    <string name="labelStartPracticeTest">Start Practice Test</string>
</resources>