<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/action_share_w"
        android:orderInCategory="97"
        android:title="@string/share"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/action_download_w"
        android:orderInCategory="98"
        android:title="@string/download"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_download_done"
        android:icon="@drawable/action_done_round_w"
        android:orderInCategory="99"
        android:title="@string/download_done"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_download_queue"
        android:icon="@drawable/action_waiting_w"
        android:orderInCategory="100"
        android:title="@string/download_queue"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_play"
        android:icon="@drawable/action_play_w"
        android:orderInCategory="101"
        android:title="@string/play"
        android:visible="true"
        app:showAsAction="always"/>

</menu>