<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/action_search_w"
        android:orderInCategory="97"
        android:title="@string/abc_search_hint"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/action_favorite_w"
        android:orderInCategory="98"
        android:title="@string/favorites"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_browse"
        android:icon="@drawable/course_explorer"
        android:orderInCategory="99"
        android:title="@string/browse_courses"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_create_assignment"
        android:icon="@drawable/action_add_w"
        android:orderInCategory="100"
        android:title="@string/label_create_quiz"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/action_done_square_multiple_w"
        android:orderInCategory="101"
        android:title="@string/string_submitted_assignments"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/filter_white"
        android:orderInCategory="102"
        android:title="@string/string_filter"
        android:visible="true"
        app:showAsAction="always"/>

    <!--<item-->
        <!--android:id="@+id/action_attendance"-->
        <!--android:icon="@drawable/add_text"-->
        <!--android:orderInCategory="103"-->
        <!--android:title="@string/attendance_hint"-->
        <!--android:visible="true"-->
        <!--app:showAsAction="always" />-->




</menu>