<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/labelPersonalEvents"
        android:icon="@drawable/personal_w"
        android:orderInCategory="97"
        android:title="@string/label_personal_events"
        android:visible="true"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/labelActivities"
        android:icon="@drawable/activities_w"
        android:orderInCategory="98"
        android:title="@string/label_activities"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/labelAnnouncements"
        android:icon="@drawable/announcements_w"
        android:orderInCategory="99"
        android:title="@string/label_announcements"
        android:visible="true"
        app:showAsAction="ifRoom"/>


</menu>