<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:background="@drawable/background_solid_personal" />

            <in.securelearning.lil.android.base.widget.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLines="1"
                android:text="@string/personal"
                android:textColor="@color/colorGreyDark" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:background="@drawable/background_solid_activities" />

            <in.securelearning.lil.android.base.widget.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLines="1"
                android:text="@string/activity"
                android:textColor="@color/colorGreyDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:background="@drawable/background_solid_period_adjustment" />

            <in.securelearning.lil.android.base.widget.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLines="1"
                android:text="@string/perd_adjust"
                android:textColor="@color/colorGreyDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:background="@drawable/background_solid_class_announcement" />

            <in.securelearning.lil.android.base.widget.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLines="1"
                android:text="@string/class_ann"
                android:textColor="@color/colorGreyDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:background="@drawable/background_solid_school_announcement" />

            <in.securelearning.lil.android.base.widget.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLines="1"
                android:text="@string/school_ann"
                android:textColor="@color/colorGreyDark" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>
