<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="16dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:text="@string/rate_and_review"
            android:textSize="24sp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/review_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:maxLines="4"/>

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:numStars="5"
            android:stepSize="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonCancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAppearance="?android:textAppearanceMedium"
              />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonRateIt"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_it"
                android:textAppearance="?android:textAppearanceMedium"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>
</layout>